# app-chat

./: .editorconfig  .gitignore  README.md  worker.toml
backend/: LICENSE  Makefile  README.md  app-chat.py  example.py  langgraph.json  pyproject.toml
backend/PreApproval/: LICENSE  Makefile  README.md  pyproject.toml
backend/PreApproval/.github/workflows/: publish-to-pypi.yml
backend/PreApproval/arcade_PreApproval/tools/: purchase.py
backend/PreApproval/evals/: eval_PreApproval.py
backend/PreApproval/tests/: test_PreApproval.py  test_purchase.py
backend/arcade_rocket_approval/: README.md  api.py  assistants.py  auth.py  base.py  defaults.py  env.py  flow.py  functional.py  graph.py  main.py  prompts.py  schema.py  tool_utils.py  utils.py
backend/arcade_rocket_approval/agent/: info_agent.py
backend/arcade_rocket_approval/tools/: approve.py  data.py  google.py  purchase.py  user.txt
backend/evals/: eval_rocket_approval.py
backend/tests/: test_rocket_approval.py
frontend/: pnpm-lock.yaml
schemas/: account-created_request.json  account-created_response.json  buying-plans.json  contact-info_request.json  contact-info_response.json  credit-info_request.json  credit-info_response.json  finances_request.json  finances_response.json  funds_request.json  funds_response.json  home_details_request.json  home_details_response.json  home_price_request.json  home_price_response.json  martial-status_request.json  martial-status_response.json  military-status_request.json  military-status_response.json  own-rent-addres_request.json  own-rent-addres_response.json  (+4 more)
(+2 files in other folders)
